--- a/src/views/Dashboard/Stake/css/style.css
+++ b/src/views/Dashboard/Stake/css/style.css
@@ -11,6 +11,10 @@ body {
 }
 
 
+#stake-margin{
+    margin-bottom: 5%;
+}
+
 /*-- Preloader css start --*/
 
 #preloader {
@@ -3650,6 +3654,7 @@ footer .footer-top .con ul li a:hover {
 
 .tokens-area .tokens .token-body .right-btn {
     display: inline-block;
+    margin-top:20%;
     height: 60px;
     line-height: 54px;
     padding: 0 45px;
